imported-function library.  Like calls on at_reset() and unlike
calls on at_exit, calls on addrandinit() are forgotten after a
"reset;".  Note that a "reset;" causes the funcadd_ASL() routines in
all currently loaded imported function libraries to be called again.

20121005
  misc.c: add progname (if not NULL) to memfailure message.
  suf_sos.c: fix a glitch with discarding SOS1 sets of size 1
and SOS2 sets of size 2 when explicitly specified by suffixes
sosno and ref (a bad idea -- it is much less error prone to
use AMPL's <<...>> notation for piecewise-linear terms).

20121016
  indic_cons.c:  fix some bugs (likely faults) that bit on problems
with many logical constraints (more than 6000 in the example behind
this bug fix).

20121101
  npqcheck.c: call get_vminv_ASL() if necessary to prevent vminv
from being inappropriately freed in the subsequent free_block(S).

20121116
  nqpcheck.c: take asl->i.nsufext[ASL_Sufkind_var] into account.
(This value is set to a positive value, e.g., by the Gurobi driver
on problems that have range constraints.)

20121212
  fpinit.c and comments in makefile.u:  make treatment of Solaris on
Intel (i386 or x86_64) self-contained.  When Intel 8087
extended-precision registers might be used, fpinit() tries to set the
rounding precision to 53 bits, to remove a source of confusion.

20121220
  dtoa.c, dtoa1.c: fix a possible one-time race when multiple
threads are used for input involving Infinity or NaN.

20130129
  dtoa.c, dtoa1.c: fix an obscure memory leak in reading hexadecimal-
format number (0x...).  This change does not affect any known solver
interfaces.  See /netlib/fp/changes.

20130213
  asl.h: move qsortv declaration ahead of include "funcadd.h" to avoid
trouble when Permit_AE_redefs is #defined; asldate.c not changed.

20130328
  asl.h, writesol.c: change msg arg to the write_sol* routines from char*
to const char*.  This should be invisible except for banishing a warning
in some solver interfaces.